--- a/students/michelle-olivieri.html
+++ b/students/michelle-olivieri.html
@@ -14,18 +14,18 @@
           <img class="learn-logo" src="https://s3.amazonaws.com/learn-verified/logo.png"/>
         </a>
       </header>
-      <div class="profile-banner" id="mathieu-balez-cover"></div>
+      <div class="profile-banner" id="michelle-olivieri-cover"></div>
       <div class="vitals-container">
-        <div class="profile-photo" id="mathieu-balez-card"></div>
+        <div class="profile-photo" id="michelle-olivieri-card"></div>
         <div class="social-icon-container">
-          <a href="http://twitter.com/matbalez"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
-          <a href="http://www.linkedin.com/matbalez"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
-          <a href="http://www.github.com/matbalez"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
+          <a href="http://twitter.com/michalysse"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
+          <a href="http://www.linkedin.com/michelleolivieri"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="http://www.github.com/micholi"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <!--<a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>-->
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Mathieu Balez</h1>
-          <h2 class="profile-location">New York, NY</h2>
+          <h1 class="profile-name">Michelle Olivieri</h1>
+          <h2 class="profile-location">Alexandria, VA</h2>
           <div class="profile-quote">"Who dares wins" - British Special Air Service</div>
         </div>
       </div>
