automatically backed up by learn

--- a/students/michelle-olivieri.html
+++ b/students/michelle-olivieri.html
@@ -26,7 +26,7 @@
         <div class="vitals-text-container">
           <h1 class="profile-name">Michelle Olivieri</h1>
           <h2 class="profile-location">Alexandria, VA</h2>
-          <div class="profile-quote">"Who dares wins" - British Special Air Service</div>
+          <div class="profile-quote">"PUT QUOTE HERE</div>
         </div>
       </div>
       <div class="details-container">
@@ -36,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I was born in Northern Ontario where I grew up riding snowmobiles.</p>
+              <p>I grew up in Brooklyn, NY and have also lived in both the DC and LA metro areas.</p>
             </div>
           </div>
         </div>
@@ -46,12 +46,12 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>Queen's University</h4>
-              <h5>BSc Electrical Engineering</h5>
+              <h4>New York University</h4>
+              <h5>BA Politics</h5>
             </div>
             <div class="description-holder">
-              <h4>Queen's University</h4>
-              <h5>MSc in Management</h5>
+              <h4>American University</h4>
+              <h5>MBA</h5>
             </div>
           </div>
         </div>
