automatically backed up by learn

--- a/students/michelle-olivieri.html
+++ b/students/michelle-olivieri.html
@@ -61,12 +61,12 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>Flatiron School</h4>
-              <h5>VP of Product</h5>
+              <h4>Sony Pictures Entertainment</h4>
+              <h5>Director, Revenue Operations</h5>
             </div>
             <div class="description-holder">
-              <h4>Google</h4>
-              <h5>Senior Product Manager</h5>
+              <h4>WebMD</h4>
+              <h5>Senior Manager, Pricing and Yield</h5>
             </div>
           </div>
         </div>
