--- a/students/michelle-olivieri.html
+++ b/students/michelle-olivieri.html
@@ -19,7 +19,7 @@
         <div class="profile-photo" id="michelle-olivieri-card"></div>
         <div class="social-icon-container">
           <a href="http://twitter.com/michalysse"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/twitter-icon.png"/></a>
-          <a href="http://www.linkedin.com/michelleolivieri"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
+          <a href="https://www.linkedin.com/in/michelleolivieri/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
           <a href="http://www.github.com/micholi"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
           <!--<a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>-->
         </div>
