--- a/students/michelle-olivieri.html
+++ b/students/michelle-olivieri.html
@@ -47,7 +47,7 @@
             </div>
             <div class="description-holder">
               <h4>New York University</h4>
-              <h5>BA Politics</h5>
+              <h5>BA, Politics</h5>
             </div>
             <div class="description-holder">
               <h4>American University</h4>
