--- a/students/michelle-olivieri.html
+++ b/students/michelle-olivieri.html
@@ -66,7 +66,7 @@
             </div>
             <div class="description-holder">
               <h4>WebMD</h4>
-              <h5>Senior Manager, Pricing and Yield</h5>
+              <h5>Senior Manager, Inventory and Pricing</h5>
             </div>
           </div>
         </div>
