automatically backed up by learn

--- a/students/michelle-olivieri.html
+++ b/students/michelle-olivieri.html
@@ -36,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>I grew up in Brooklyn, NY and have also lived in both the DC and LA metro areas.</p>
+              <p>I grew up in Brooklyn, NY before everyone else discovered it!</p>
             </div>
           </div>
         </div>
